# Fiber_Devkit

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  SCENARIO_FORMAT.md  TAXONOMY.md  package.json  pnpm-lock.yaml
.github/workflows/: fiber-ci.yml
console/: app.js  index.html  style.css
docs/: cch-setup.md  console-replay-data.json  index.html
docs/Devkit_screebshots/UI_actions/: index.html
docs/casts/: demo-basic-payment.cast  demo-doctor.cast  demo-low-liquidity.cast  demo-network.cast  demo-predict.cast  demo-report-ci.cast
scenarios/: basic-payment.yaml  channel-exhaustion.yaml  low-liquidity.yaml  multi-hop-routing.yaml  network-smoke.yaml  peer-offline.yaml
scripts/: devkit-fund-nodes.ts  devkit-node-balances.ts  devkit-support.ts  record-demo-casts.sh
src/: config.rs  main.rs  visibility.rs
src/cli/: ci.rs  console.rs  doctor.rs  down.rs  init.rs  inspect.rs  mod.rs  predict.rs  report.rs  reset.rs  run.rs  simulate.rs  up.rs  validate.rs
src/console/: assets.rs  mod.rs  server.rs
src/diagnostic/: engine.rs  mod.rs  taxonomy.rs
src/network/: compose.rs  manager.rs  mod.rs  templates.rs
src/reporter/: formats.rs  mod.rs
src/route/: analyzer.rs  cch.rs  mod.rs
src/rpc/: client.rs  mod.rs  types.rs
src/scenario/: mod.rs  parser.rs  runner.rs  types.rs
src/tracer/: events.rs  mod.rs
templates/: hub.toml  leaf.toml
