[package]
name = "fiber-devkit"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "fiber"
path = "src/main.rs"

[dependencies]
bollard = "0.17"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
